--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Youngjae Choi"
 title_separator          : "-"
 name                     : &name "Youngjae Choi"
 description              : &description "M.S student at Korea University"
-url                      : 
+url                      : "https://youngjaechoi7.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : ""
+repository               : "youngjaechoi7/youngjaechoi7.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
